# projects-city

./: Building.cpp  Building.h  CMakeLists.txt  City.cpp  City.h  CityAnimator.cpp  CityAnimator.h  CityGrid.cpp  CityGrid.h  Echo.cpp  Echo.h  FaceBuilder.cpp  FaceBuilder.h  IRCCity.cpp  IRCCity.h  IRCCityBlock.cpp  IRCCityBlock.h  IRCCityBuilding.cpp  IRCCityBuilding.h  InspectorBar.cpp  InspectorBar.h  MainUI.cpp  MainUI.h  MainUI.ui  README.txt  RenderStateHandler.h  ShadowLight.cpp  ShadowLight.h  city.dist  main.cpp
Renderers/OpenGL/: AmbientOcclusion.cpp  AmbientOcclusion.h  ShadowMap.cpp  ShadowMap.h
data/: oe-init.scm  test.scm
data-repo/thingy/: Hesty.dae
report/: ambient.tex  intro.tex  master.tex  openengine.tex  ref.bib  running.tex  shadowmapping.tex
shaders/: AmbientOcclusion.glsl  AmbientOcclusion.glsl.frag  AmbientOcclusion.glsl.vert  AmbientOcclusion0.glsl  AmbientOcclusion0.glsl.frag  AmbientOcclusion0.glsl.vert  AmbientOcclusion1.glsl  AmbientOcclusion1.glsl.frag  AmbientOcclusion1.glsl.vert  Shadow1.glsl  Shadow1.glsl.frag  Shadow1.glsl.vert  Shadow1dbg.glsl  Shadow1dbg.glsl.frag  Shadow1dbg.glsl.vert  Shadow2.glsl  Shadow2.glsl.frag  Shadow2.glsl.vert  SurfaceNormals.glsl  SurfaceNormals.glsl.frag  blur.glsl.vert  blurX.glsl  blurX.glsl.frag  blurY.glsl  blurY.glsl.frag  merge.glsl  merge.glsl.frag
